# PMML

./: ModelTrainer.ipynb  PAN.ipynb  README.md  evaa.ipynb  evaluate.ipynb  evaluation.ipynb  fpn-sentinel.ipynb  landcover_deeplab.ipynb  landcover_pan.ipynb  pan_sentinel.ipynb  pyproject.toml  requirements.txt  unet.ipynb
data/AMAZON/Test/image/: S2A_MSIL2A_20200111T142701_N0213_R053_T20NQG_20200111T164651_04_19.tif  S2A_MSIL2A_20200111T142701_N0213_R053_T20NQG_20200111T164651_08_03.tif  S2A_MSIL2A_20200111T142701_N0213_R053_T20NQG_20200111T164651_19_09.tif  S2A_MSIL2A_20200217T141651_N0209_R010_T20LQN_20200217T160045_01_20.tif  S2A_MSIL2A_20200217T141651_N0209_R010_T20LQN_20200217T160045_12_04.tif  S2A_MSIL2A_20200217T141651_N0209_R010_T20LQN_20200217T160045_13_19.tif  S2A_MSIL2A_20200217T141651_N0209_R010_T20LQN_20200217T160045_16_14.tif  S2A_MSIL2A_20200217T141651_N0209_R010_T20LQN_20200217T160045_18_03.tif  S2A_MSIL2A_20200217T141651_N0209_R010_T20LQN_20200217T160045_19_04.tif  S2A_MSIL2A_20200217T141651_N0209_R010_T20LQN_20200217T160045_21_09.tif  S2A_MSIL2A_20200818T142741_N0214_R053_T20LMP_20200818T165705_02_03.tif  S2A_MSIL2A_20200818T142741_N0214_R053_T20LMP_20200818T165705_03_18.tif  S2A_MSIL2A_20200818T142741_N0214_R053_T20LMP_20200818T165705_08_06.tif  S2A_MSIL2A_20200818T142741_N0214_R053_T20LMP_20200818T165705_11_08.tif  S2A_MSIL2A_20200818T142741_N0214_R053_T20LMP_20200818T165705_13_18.tif  S2B_MSIL2A_20200202T141649_N0213_R010_T20LQN_20200202T164215_02_08.tif  (+1 more)
extraTools/: apiTimeComparation.ipynb  timeComparation.ipynb
(+2355 files in other folders)
