[tool.poetry]
name = "deforestation detection"
version = "0.1.0"
description = "different models trained to detect deforestaion in the Amazon. with possibilities to compare the performance"
authors = ["Rocco, Piotr, Julian"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13.11"
torch = "^2.10.0"
segmentation-models-pytorch = "^0.5.0"
torchvision = "^0.25.0"
numpy = "1.26.4"
matplotlib = "^3.10.8"
rasterio = "1.3.10"
shapely = "^2.1.2"
pillow = "^12.1.0"
seaborn = "^0.13.2"
oauthlib = "^3.3.1"
jupyter = "^1.1.1"

[tool.poetry.dev-dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
